--- a/index.html
+++ b/index.html
@@ -281,6 +281,14 @@
         },
         methods: {
             search(e) {
+                console.log(this.timer)
+                if(this.timer !==null){
+                    alert("每两秒钟仅能查询一次哦~")
+                    return
+                }
+                this.timer = setTimeout(()=>{
+                    this.timer = null
+                },2000)
                 this.id = 0
                 for (let item of this.heroList) {
                     if (item.cname === this.heroName) {
