--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             }
 
             #input {
-                top: 200px;
+                top: 20%;
                 height: 50px;
                 width: 500px;
             }
@@ -40,7 +40,7 @@
             }
             #score_list {
                 border-radius: 8px;
-                top: 320px;
+                top: 35%;
                 height: 250px;
                 width: 400px;
             }
