--- a/index.html
+++ b/index.html
@@ -380,7 +380,6 @@
         },
         methods: {
             search(e) {
-                console.log(this.timer)
                 if (this.timer !== null) {
                     alert("每两秒钟仅能查询一次哦~")
                     return
@@ -398,6 +397,7 @@
                     }
                     this.id++
                 }
+                alert("未找到此英雄，请确认英雄名称~")
             },
             changeBackground(e) {
                 if (e.target.tagName !== "SPAN") return
