--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
                     }
                     this.id++
                 }
+                alert("未找到此英雄，请确认英雄名称~")
             },
             changeBackground(e) {
                 if (e.target.tagName !== "SPAN") return
