--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 margin-left: 60px;
                 height: 100px;
                 line-height: 100px;
-                width: 60%;
+                width: 400px;
             }
             i {
                 font-size: 28px;
