--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body,
         html,
         #app {
-            position: fixed;
+            position: relative;
             margin: 0;
             width: 100%;
             height: 100%;
@@ -26,7 +26,7 @@
             width: 100%;
             font-size: 13px;
             bottom:0px;
-            position: fixed;
+            position: absolute;
             display: flex;
             justify-content: center;
             flex-wrap: nowrap;
