--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             width: 100%;
             height: 100%;
-            background-color: #fff;
+            background-color: white;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
